Collection data types

--- a/Collection Data Types.ipynb
+++ b/Collection Data Types.ipynb
@@ -595,10 +595,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 106,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1904, 1908, 1912, 1916, 1920, 1924, 1928, 1932, 1936]"
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "leaps = []\n",
+    "for year in range(1900, 1940):\n",
+    "    if (year % 4 == 0 and year % 100 != 0) or (year % 400 == 0):\n",
+    "        leaps.append(year)\n",
+    "leaps"
+   ]
   },
   {
    "cell_type": "code",
